# UAV-navigation-system

tello_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
tello_ws/install/tello_controller/share/ament_index/resource_index/parent_prefix_path/: tello_controller
tello_ws/install/tello_controller/share/tello_controller/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
tello_ws/install/tello_controller/share/tello_controller/cmake/: tello_controllerConfig.cmake
tello_ws/log/: latest_build
tello_ws/src/tello_controller/: CMakeLists.txt
tello_ws/src/tello_controller/include/: controller.hpp  droneskills.hpp  skills.hpp  teste.hpp
tello_ws/src/tello_controller/network/: CMakeLists.txt  socket.cpp  socket.hpp  tcpsocket.cpp  tcpsocket.hpp  udpsocket.cpp  udpsocket.hpp
tello_ws/src/tello_controller/src/: controller.cpp  droneskills.cpp  skills.cpp  skillsmain.cpp  teste.cpp
